<resources>
    <string name="app_name">Session</string>
    <string name="install_url" translatable="false">https://getsession.org/</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="please_wait">Please wait...</string>
    <string name="save">Save</string>
    <string name="note_to_self">Note to Self</string>
    <string name="version_s">Version %s</string>
    <string name="AbstractNotificationBuilder_new_message">New message</string>
    <string name="AlbumThumbnailView_plus">\+%d</string>
    <string name="ApplicationPreferencesActivity_currently_s">Currently: %s</string>
    <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">You haven\'t set a passphrase yet!</string>
    <plurals name="ApplicationPreferencesActivity_messages_per_conversation">
        <item quantity="one">%d message per conversation</item>
        <item quantity="other">%d messages per conversation</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete_all_old_messages_now">Delete all old messages now?</string>
    <plurals name="ApplicationPreferencesActivity_this_will_immediately_trim_all_conversations_to_the_d_most_recent_messages">
        <item quantity="one">This will immediately trim all conversations to the most recent message.</item>
        <item quantity="other">This will immediately trim all conversations to the %d most recent messages.</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete">Delete</string>
    <string name="ApplicationPreferencesActivity_disable_passphrase">Disable passphrase?</string>
    <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">This will permanently unlock Session and message notifications.</string>
    <string name="ApplicationPreferencesActivity_disable">Disable</string>
    <string name="ApplicationPreferencesActivity_unregistering">Unregistering</string>
    <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Unregistering from Session messages and calls...</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Disable Session messages and calls?</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Disable Session messages and calls by unregistering from the server. You will need to re-register your phone number to use them again in the future.</string>
    <string name="ApplicationPreferencesActivity_error_connecting_to_server">Error connecting to server!</string>
    <string name="ApplicationPreferencesActivity_sms_enabled">SMS Enabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_change_your_default_sms_app">Touch to change your default SMS app</string>
    <string name="ApplicationPreferencesActivity_sms_disabled">SMS Disabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_make_signal_your_default_sms_app">Touch to make Session your default SMS app</string>
    <string name="ApplicationPreferencesActivity_on">on</string>
    <string name="ApplicationPreferencesActivity_On">On</string>
    <string name="ApplicationPreferencesActivity_off">off</string>
    <string name="ApplicationPreferencesActivity_Off">Off</string>
    <string name="ApplicationPreferencesActivity_sms_mms_summary">SMS %1$s, MMS %2$s</string>
    <string name="ApplicationPreferencesActivity_privacy_summary">Screen lock %1$s, Registration lock %2$s</string>
    <string name="ApplicationPreferencesActivity_appearance_summary">Theme %1$s, Language %2$s</string>
    <plurals name="AppProtectionPreferenceFragment_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="DraftDatabase_Draft_image_snippet">(image)</string>
    <string name="DraftDatabase_Draft_audio_snippet">(audio)</string>
    <string name="DraftDatabase_Draft_video_snippet">(video)</string>
    <string name="DraftDatabase_Draft_location_snippet">(location)</string>
    <string name="DraftDatabase_Draft_quote_snippet">(reply)</string>
    <string name="AttachmentManager_cant_open_media_selection">Can\'t find an app to select media.</string>
    <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Session requires the Storage permission in order to attach photos, videos, or audio, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Storage\".</string>
    <string name="AttachmentManager_signal_requires_contacts_permission_in_order_to_attach_contact_information">Session requires Contacts permission in order to attach contact information, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Contacts\".</string>
    <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">Session requires Location permission in order to attach a location, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Location\".</string>
    <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Session requires the Camera permission in order to take photos, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Camera\".</string>
    <string name="AudioSlidePlayer_error_playing_audio">Error playing audio!</string>
    <string name="BlockedContactsActivity_blocked_contacts">Blocked contacts</string>
    <string name="BucketedThreadMedia_Today">Today</string>
    <string name="BucketedThreadMedia_Yesterday">Yesterday</string>
    <string name="MediaOverviewActivity_Select_all">Select all</string>
    <string name="recipient_preferences__mute_conversation">Mute conversation</string>
    <string name="recipient_preferences__vibrate">Vibrate</string>
    <string name="recipient_preferences__block">Block</string>
    <string name="recipient_preferences__ringtone">Ringtone</string>
    <string name="preferences__pref_enter_sends_title">Enter key sends</string>
    <string name="preferences__pressing_the_enter_key_will_send_text_messages">Pressing the Enter key will send text messages</string>
    <string name="preferences__mmsc_url">MMSC URL</string>
    <string name="preferences__mms_proxy_host">MMS Proxy Host</string>
    <string name="preferences__mms_proxy_port">MMS Proxy Port</string>
    <string name="preferences__mmsc_username">MMSC Username</string>
    <string name="preferences__mmsc_password">MMSC Password</string>
    <string name="preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length">Automatically delete older messages once a conversation exceeds a specified length</string>
    <string name="preferences__delete_old_messages">Delete old messages</string>
    <string name="preferences__conversation_length_limit">Conversation length limit</string>
    <string name="preferences__trim_all_conversations_now">Trim all conversations now</string>
    <string name="preferences__scan_through_all_conversations_and_enforce_conversation_length_limits">Scan through all conversations and enforce conversation length limits</string>
    <string name="preferences_chats__when_using_mobile_data">When using mobile data</string>
    <string name="preferences_chats__when_using_wifi">When using Wi-Fi</string>
    <string name="preferences_chats__when_roaming">When roaming</string>
    <string name="preferences_chats__media_auto_download">Media auto-download</string>
    <string name="preferences_chats__message_trimming">Message Trimming</string>
    <string name="preferences_advanced__use_system_emoji">Use system emoji</string>
    <string name="preferences_advanced__disable_signal_built_in_emoji_support">Disable Session\'s built-in emoji support</string>
    <string name="preferences_chats__chats">Chats</string>
    <string name="preferences_chats__show_invitation_prompts">Show invitation prompts</string>
    <string name="preferences_chats__display_invitation_prompts_for_contacts_without_signal">Display invitation prompts for contacts without Session</string>
    <string name="preferences_chats__message_text_size">Message font size</string>
    <string name="conversation_context__menu_message_details">Message details</string>
    <string name="conversation_context__menu_copy_text">Copy text</string>
    <string name="conversation_context__menu_delete_message">Delete message</string>
    <string name="conversation_context__menu_forward_message">Forward message</string>
    <string name="conversation_context__menu_resend_message">Resend message</string>
    <string name="conversation_context_image__save_attachment">Save attachment</string>
    <string name="convesation_group_options__recipients_list">Recipients list</string>
    <string name="conversation_group_options__delivery">Delivery</string>
    <string name="conversation_group_options__conversation">Conversation</string>
    <string name="conversation_group_options__broadcast">Broadcast</string>
    <string name="media_preview__save_title">Save</string>
    <string name="media_preview__forward_title">Forward</string>
    <string name="media_preview__all_media_title">All media</string>
    <string name="preferences_chats__chat_backups">Chat backups</string>
    <string name="preferences_chats__backup_chats_to_external_storage">Backup chats to external storage</string>
    <string name="preferences_chats__create_backup">Create backup</string>
    <string name="preferences_chats__backups">Backups</string>
    <string name="view_qr_code_title">Your QR Code</string>
    <string name="view_qr_code_explanation">This is your personal QR code. Other people can scan it to start a secure conversation with you.</string>
    <string name="view_qr_code_cancel_button_title">Cancel</string>
    <string name="continue_2">Continue</string>
    <string name="next">Next</string>
    <string name="fragment_enter_session_id_title">Link your device</string>
    <string name="fragment_enter_session_id_explanation">Navigate to "Settings" > "Devices" > "Link a Device" on your other device and then enter your Session ID here to start the linking process.</string>
    <string name="fragment_enter_session_id_edit_text_hint">Enter your Session ID</string>
    <string name="activity_pn_mode_title">Push Notifications</string>
    <string name="activity_pn_mode_explanation">There are two ways Session can handle push notifications. Make sure to read the descriptions carefully before you choose.</string>
    <string name="activity_pn_mode_fcm_option_title">Firebase Cloud Messaging</string>
    <string name="activity_pn_mode_fcm_option_explanation">Session will use the Firebase Cloud Messaging service to receive push notifications. You\'ll be notified of new messages reliably and immediately. Using FCM means that your IP address and device token will be exposed to Google. If you use push notifications for other apps, this will already be the case. Your IP address and device token will also be exposed to Loki, but your messages will still be onion-routed and end-to-end encrypted, so the contents of your messages will remain completely private.</string>
    <string name="activity_pn_mode_background_polling_option_title">Background Polling</string>
    <string name="activity_pn_mode_background_polling_option_explanation">Session will occasionally check for new messages in the background. This guarantees full metadata protection, but message notifications may be significantly delayed.</string>
    <string name="activity_pn_mode_recommended_option_tag">Recommended</string>
</resources>