<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <org.thoughtcrime.securesms.components.MmsMmscDialogPreference
            android:title="@string/preferences__mmsc_url"
            android:inputType="textUri" />

    <org.thoughtcrime.securesms.components.MmsProxyDialogPreference
        android:title="@string/preferences__mms_proxy_host"
        android:inputType="textUri" />

    <org.thoughtcrime.securesms.components.MmsProxyPortDialogPreference
            android:title="@string/preferences__mms_proxy_port"
            android:inputType="number"/>

    <org.thoughtcrime.securesms.components.MmsUseDialogPreference
            android:title="@string/preferences__mmsc_username"
            android:inputType="textNoSuggestions"/>

    <org.thoughtcrime.securesms.components.MmsPasswordDialogPreference
            android:title="@string/preferences__mmsc_password"
            android:inputType="textVisiblePassword"/>

</PreferenceScreen>