<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/conversation_context__menu_unpin_message"
        android:id="@+id/menu_context_unpin_message"
        android:icon="?menu_unpin_icon"
        app:showAsAction="always" />

    <item android:title="@string/conversation_context__menu_pin_message"
        android:id="@+id/menu_context_pin_message"
        android:icon="?menu_pin_icon"
        app:showAsAction="always" />

    <item android:title="@string/conversation_context__menu_message_details"
          android:id="@+id/menu_context_details"
          android:icon="?menu_info_icon"
          app:showAsAction="always" />

    <item android:title="@string/conversation_context__menu_delete_message"
        android:id="@+id/menu_context_delete_message"
        android:icon="?menu_trash_icon"
        app:showAsAction="always" />

    <item android:title="@string/conversation_context__menu_copy_text"
          android:id="@+id/menu_context_copy"
          android:icon="?menu_copy_icon"
          app:showAsAction="always" />

    <item android:title="@string/conversation_context__menu_forward_message"
          android:id="@+id/menu_context_forward"
          android:icon="?menu_forward_icon"
          app:showAsAction="ifRoom" />

    <item android:title="@string/conversation_context__menu_resend_message"
          android:id="@+id/menu_context_resend"
          android:visible="false"
          app:showAsAction="never" />

    <item android:title="@string/conversation_context_image__save_attachment"
          android:id="@+id/menu_context_save_attachment"
          android:visible="false"
          android:icon="?menu_save_icon"
          app:showAsAction="always" />
</menu>
