<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/convesation_group_options__recipients_list"
          android:id="@+id/menu_group_recipients"
          android:icon="@drawable/ic_groups_holo_dark"
          android:showAsAction="ifRoom" />

    <item android:title="@string/conversation_group_options__delivery"
          android:id="@+id/menu_group_delivery"
          android:icon="@drawable/group_distribute"
          android:showAsAction="ifRoom" >

        <menu >
            <group android:id="@+id/distribution_group"
                   android:checkableBehavior="single">
                <item android:id="@+id/menu_distribution_conversation" android:title="@string/conversation_group_options__conversation" android:checked="true" />
                <item android:id="@+id/menu_distribution_broadcast" android:title="@string/conversation_group_options__broadcast" />
            </group>
        </menu>
    </item>
</menu>
