<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/archive"
        android:icon="@drawable/ic_archive_white_24dp"
        android:title="@string/archive"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/save"
        android:title="@string/save"
        android:icon="@drawable/ic_save_white_24dp"
        app:showAsAction="always"/>

    <item android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="always"/>

    <item android:id="@+id/select_all"
        android:title="@string/MediaOverviewActivity_Select_all"
        android:icon="?menu_selectall_icon"
        app:showAsAction="always"/>
</menu>
