<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_session_background"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/large_spacing"
        android:layout_marginRight="@dimen/large_spacing"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textColor="@color/text"
        android:text="@string/fragment_enter_session_id_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/large_spacing"
        android:layout_marginTop="4dp"
        android:layout_marginRight="@dimen/large_spacing"
        android:textSize="14sp"
        android:textColor="@color/text"
        android:text="@string/fragment_enter_session_id_explanation" />

    <EditText
        style="@style/SmallSessionEditText"
        android:id="@+id/sessionIDEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/large_spacing"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/large_spacing"
        android:hint="@string/fragment_enter_session_id_edit_text_hint" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        style="@style/MediumProminentOutlineButton"
        android:id="@+id/requestDeviceLinkButton"
        android:layout_width="196dp"
        android:layout_height="@dimen/medium_button_height"
        android:layout_marginBottom="@dimen/small_spacing"
        android:text="@string/next" />

</LinearLayout>