<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/titleTextView"
        style="@style/Signal.Text.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:text="@string/view_qr_code_title" />

    <TextView
        android:id="@+id/explanationTextView"
        style="@style/Signal.Text.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:text="@string/view_qr_code_explanation" />

    <ImageView
        android:id="@+id/qrCodeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="24dp"
        android:background="@color/white" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/transparent"
        android:textColor="@color/signal_primary"
        android:text="@string/view_qr_code_cancel_button_title"
        android:elevation="0dp"
        android:stateListAnimator="@null" />

</LinearLayout>